--- a/react-app/src/styles/Navbar.module.css
+++ b/react-app/src/styles/Navbar.module.css
@@ -1,5 +1,13 @@
-.nav {
+.container {
     height: 100vh;
+}
+
+nav {
+    height: 100%;
+}
+
+.nav {
+    height: 100%;
     padding: 0 2.5rem;
     background-color: var(--secondary);
     display: flex;
@@ -53,13 +61,13 @@
 }
 
 .expanded {
-    width: 150px;
+    width: 200px;
     transition: width 0.3s;
+    background-color: var(--secondary);
 }
 
 .collapsed {
     width: 0;
-    /* Width when collapsed */
     height: 0;
     padding: 0;
 }
@@ -72,3 +80,18 @@
     height: 3rem;
 }
 
+.icon {
+    position: absolute;
+    left: 0;
+    top: 0;
+    margin-left: 1rem;
+    margin-top: 1rem;
+    height: fit-content;
+}
+
+
+.show {
+    position: absolute;
+    top: 0;
+    left: 0;
+}
