--- a/react-app/src/styles/WorkPage.module.css
+++ b/react-app/src/styles/WorkPage.module.css
@@ -1,8 +1,3 @@
-.toggles {
-  display: flex;
-  justify-content: space-between;
-}
-
 .widgets {
   padding-left: 2rem;
   padding-right: 2rem;
@@ -11,6 +6,7 @@
   overflow-y: scroll;
   height: 100vh;
   flex: 1;
+  box-sizing: border-box;
 }
 
 .header {
@@ -36,8 +32,20 @@
   left: 0;
 }
 
+.cal {
+  display: block;
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin-right: 1rem;
+  margin-top: 1rem;
+}
+
 .hide {
     display: none;
 }
 
-
+.icon {
+  margin-left: 1rem;
+  margin-top: 1rem;
+}
